[package]
name = "forecast"
version = "0.1.0"
authors = ["jake"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2" 
error-chain = "0.12.4"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"